--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,3 +42,9 @@
       .form-inline{
         float: right;
       }
+
+      /* Google map div dimensions */
+      #map {
+        height: 100%;
+        width: 100%;
+      }
