Brian's second upload adds 2nd modal for signup

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,3 +150,15 @@ Login Info Styling
   #loggedInAs {
     color: white;
   }
+
+  #nbBtnLogin {
+    margin-top: 3px;
+  }
+
+  #nbBtnSignUp {
+    margin-top: 3px;
+  }
+
+  #nbBtnLogout {
+    margin-top: 3px;
+  }
